# flask-ticket-manager

./: .gitignore  MIND.org  README.md  config.py  pyproject.toml
instance/: app.db
src/: __init__.py  models.py
src/events/: __init__.py  crud.py  schemas.py
src/static/css/: base.css  form_users.css
src/templates/: 404.html  base.html
src/tickets/: __init__.py  crud.py  schemas.py
src/users/: __init__.py  crud.py  forms.py  routes.py
src/users/templates/users/: login.html  register.html
tests/: conftest.py  factories.py
tests/functional/: test_users.py
tests/unit/: test_crud.py  test_models.py
