[tool.poetry]
name = "flask-ticket-manager"
version = "0.1.0"
description = ""
authors = ["Parpi"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-pydantic-spec = "^0.1.5"
python-dateutil = "^2.8.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.15.1"
python-dotenv = "^0.19.0"
WTForms = "^2.3.3"
email-validator = "^1.1.3"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
flake8 = "^3.9.2"
factory-boy = "^3.2.0"
pytest-mock = "^3.6.1"
pytest-env = "^0.6.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
